--- a/public/css/bl.css
+++ b/public/css/bl.css
@@ -1,6 +1,13 @@
 .item img {
-	width: 1200px;
-    height: 485px !important;
+	height: 100%;
+	
+}
+.bl_cx_k {
+	display: none;
+	float: right;
+	width: 0px;
+	color: black;
+	outline: none;
 }
 .container {
 	width: 1200px !important;
@@ -16,9 +23,11 @@
 	margin-right: 350px;
 }
 .bl_top_word {
-	line-height: 100px;
+	height: 30px;
+	line-height: 30px;
 	font-size: 15px;
 	cursor: pointer;
+	margin-top: 40px;
 }
 .bl_top_word:hover {
 	color: red;
@@ -81,15 +90,21 @@
 }
 .bl_company_word ul li {
 	font-size: 25px;
+	width: 500px;
+	
 }
 .bl_company_word ul li:nth-child(1) {
 	font-size: 40px;
 	color: green;
+	letter-spacing: 5px;
 }
 .bl_company_word ul li:nth-child(2) {
 	color: black;
 	font-size: 30px;
+	margin-top: 30px;
+	line-height: 20px;
 }
+
 .bl_company_wordAndP {
 	margin-top: 30px;
 }
@@ -100,14 +115,25 @@
 	border-radius: 20px;
 	margin-left: 80px;
 	width: 300px;
-	height: 500px;
+	height: 350px;
+	position: relative;
+	margin-top: 40px;
+}
+.bl_company_wordAndP > div > div {
+	font-size: 20px;
 }
 .bl_company_wordAndP_learnMore {
 	font-size: 20px;
 	cursor: pointer;
+	bottom: 0px;
+	position: absolute;
+	margin-left: 80px;
+	margin-bottom: 15px;
 }
-.bl_company_wordAndP_learnMore:hover {
-	color: red;
+.bl_company_wordAndP_learnMore a,
+.bl_company_wordAndP_learnMore a:focus {
+	color: black;
+	text-decoration: none;
 }
 .bl_company div:nth-child(3) > div > div {
 	font-size: 20px;
@@ -131,7 +157,6 @@
 }
 .bl_product_dami {
 	width: 400px;
-	border: 1px solid black;
 	position: relative;
 }
 .bl_product_dami > div:nth-child(1) {
@@ -149,7 +174,12 @@
     width: 170px;
     height: 70px;
     font-size: 20px;
-	background-color: #d9eee5;
+	background-color: rgba(0,0,0,0);
+	border-bottom: 1px solid white;
+	border-right: 0px;
+}
+.bl_product_dami > div:nth-child(1) div button:hover {
+	background-color: rgba(0,0,0,0);
 }
 .bl_product_dami > div:nth-child(1) div ul {
     font-size: 20px;
@@ -161,12 +191,35 @@
 	width: 600px;
 	top: 0px;
 }
-.bl_product_dami_right ul li {
+.bl_product_dami_right ul:nth-child(1) li {
 	list-style: none;
 	font-size: 20px;
+	margin-top: 20px;
 }
-.bl_product_dami_right ul li:nth-child(1) {
+.bl_product_dami_right ul:nth-child(1) li:nth-child(1) {
 	font-size: 40px;
+}
+.bl_product_dami_right ul:nth-child(2) li {
+	border-bottom: 1px solid black;
+	height: 120px;
+	width: 80%;
+	margin-left: 40px;
+}
+.bl_product_dami_right ul:nth-child(2) li img {
+	float: left;
+	width: 90px;
+	margin-top: 5px;
+}
+.bl_product_dami_right ul:nth-child(2) li > div > div{
+	float: left;
+	font-size: 20px;
+	margin-left: 50px;
+    margin-top: 10px;
+
+}
+.bl_product_dami_right ul:nth-child(2) li > div > div div {
+	margin-top: 10px;
+	letter-spacing: 3px;
 }
 /* contact */
 .bl_contact > div:nth-child(1) {
@@ -177,7 +230,7 @@
 	width: 100%;
 	background: url(../img/contactBg1.jpg) no-repeat;
 	background-size: 100% 100%;
-	height: 350px;
+	height: 300px;
 	
 }
 .bl_contact > div:nth-child(2) > ul {
@@ -187,7 +240,7 @@
 .bl_contact > div ul li {
 	list-style: none;
 	font-size: 24px;
-	line-height: 80px;
+	line-height: 70px;
 }
 .bl_contact > div:nth-child(2) ul li:nth-child(1) {
 	font-size: 45px;
@@ -206,15 +259,16 @@
 }
 .bl_contact_company {
 	background: url(../img/contactbg2.jpg) no-repeat;
-	background-size: 100% 100%;
+	background-size: auto 100%;
 	width: 400px;
 	position: relative;
+	height: 600px;
 }
 .bl_contact_company > ul {
 	list-style: none;
 	margin-left: 145px;
 	border-left: 1px solid white;
-	height: 500px;
+	height: 600px;
 	margin-bottom: 0px;
 }
 .bl_contact_company > ul li {
@@ -222,6 +276,10 @@
 	height: 60px;
 	margin-left: 40px;
 	margin-bottom: 20px;
+}
+.bl_contact_company > ul li img {
+	width: 70px;
+	margin-left: 30px;
 }
 .bl_contact_company > ul li:nth-child(1) {
 	width: 200px;
@@ -232,12 +290,47 @@
 }
 .bl_contact_company > div {
 	width: 600px;
-	height: 500px;
+	height: 300px;
 	margin-left: 480px;
-	margin-top: -500px;
 }
 .bl_contact_company > div ul li{
 	margin-left: 40px;
+}
+.bl_contact_company_Feedback > div:nth-child(1) {
+	background-color: #37ac80;
+	width: 500px;
+	float: left;
+}
+.bl_contact_company_Feedback > div:nth-child(1) > ul {
+	list-style: none;
+	margin-left: 145px;
+	border-left: 1px solid white;
+	height: 600px;
+	margin-bottom: 0px;
+	border-left: 1px solid white;
+	color: white;
+	font-weight: 100;	
+	padding-top: 20px;
+}
+.bl_contact_company_Feedback > div:nth-child(2) {
+	width: 680px;
+	float: right;
+}
+.bl_contact_company_Feedback > div:nth-child(2) textarea {
+	width: 100%;
+	height: 550px;
+	font-size: 23px;
+	padding-left: 20px;
+	padding-top: 20px;
+	letter-spacing: 3px;
+}
+.bl_contact_company_Feedback > div:nth-child(2) button {
+	height: 30px;
+	width: 70px;
+	border-radius: 15px;
+	font-size: 20px;
+	color: white;
+	background-color: #5991c5;
 }
 /* footer */
 .footerTop {
@@ -248,16 +341,22 @@
 	list-style: none;
 }
 .footerTop ul li:nth-child(1) {
-	font-size: 30px;
+	font-size: 25px;
 	color: green;
 }
 .footerBottom {
 	background-color: #d2e6dd;
+	height: 200px;
+	margin-bottom: 0px;
 }
 .footerBottom ul {
 	float: left;
 	margin-left: 120px;
 	font-weight: 360;
+	margin-top: 20px;
+}
+.footerBottom ul li {
+	padding-top: 10px;
 }
 .footerBottom ul li:nth-child(1) {
 	cursor: pointer;
@@ -274,8 +373,27 @@
 
 
 
+/* 产品中心轮播 */
+body{ background:#fff; font:normal 12px/22px 宋体;  }
+img{ border:0;}
 
-
+.picScroll-left{ width:1200px; overflow:hidden; position:relative;height: 400px;  margin-top: 30px;}
+.picScroll-left .hd{ overflow:hidden;  height:30px; padding:0 10px;margin-top: 50px; width: 200px;}
+.picScroll-left .hd .prev,.picScroll-left .hd .next{ display:block;  width:5px; height:9px; float:right; margin-right:5px; margin-top:10px;  overflow:hidden;
+	 cursor:pointer; background:url(./img/arrow.png) no-repeat;}
+.picScroll-left .hd .next{ background-position:0 -50px;  }
+.picScroll-left .hd .prevStop{ background-position:-60px 0; }
+.picScroll-left .hd .nextStop{ background-position:-60px -50px; }
+.picScroll-left .hd ul{ float:right; overflow:hidden; zoom:1; margin-top:10px; zoom:1;margin-right: 800px;}
+.picScroll-left .hd ul li{ float:left;  width:9px; height:9px; overflow:hidden; margin-right:5px; text-indent:-999px; cursor:pointer; background:url(./img/icoCircle.gif) 0 -9px no-repeat; }
+.picScroll-left .hd ul li.on{ background-position:0 0; }
+.picScroll-left .bd{ padding:10px;   }
+.picScroll-left .bd ul{ overflow:hidden; zoom:1; }
+.picScroll-left .bd ul li{ margin:0 8px; float:left; display:inline; overflow:hidden; text-align:center;margin-left: 70px;}
+.picScroll-left .bd ul li .pic{ text-align:center;}
+.picScroll-left .bd ul li .pic img{ width:300px; height:150px; display:block;  padding:2px; border:1px solid #ccc;margin: 0px auto;}
+.picScroll-left .bd ul li .pic a:hover img{ border-color:#999;  }
+.picScroll-left .bd ul li .title{ line-height:24px;   }
 /* 测试 */
 .bl_lb {
 	display: block;
@@ -283,15 +401,18 @@
 .bl_company {
 	display: block;
 }
-.bl_product {
+/* .bl_product {
 	display: none;
-}
+} */
 .bl_EnterpriseDynamics {
-    display: none;
+    display: block;
 }
-.bl_contact {
+/* .bl_contact {
 	display: none;
-}
-.bl_product_topbg {
+} */
+/* .bl_product_topbg {
 	background: #45b884;
+} */
+.bl_contact_company {
+	display: none;
 }
